[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/sprites/enemy/Enemy_1.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/enemy/Enemy_2.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/enemy/Enemy_3.png" type="Texture" id=3]
[ext_resource path="res://app/enemy/Enemy.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/enemy/enemy_dead.png" type="Texture" id=5]
[ext_resource path="res://assets/sounds/enemy/hit.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/enemy/detect.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/enemy/death.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 23.8135

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 27.5194
height = 2.35464

[sub_resource type="Curve" id=4]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
resource_local_to_scene = true
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.1
angular_velocity = 100.0
angular_velocity_curve = SubResource( 5 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 90.0
angle_random = 0.5
scale = 6.0
scale_random = 0.5
color = Color( 0.588235, 0, 0, 1 )

[node name="Enemy" type="KinematicBody2D" groups=[
"enemies",
]]
position = Vector2( 95.0968, 89.2122 )
script = ExtResource( 4 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Dead" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="Alive" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
animation = "Idle"
frame = 3
playing = true

[node name="PlayerDetectionTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="PlayerDetectorRay" type="RayCast2D" parent="."]
enabled = true

[node name="AttackZone" type="Area2D" parent="."]

[node name="AttackZoneShape" type="CollisionShape2D" parent="AttackZone"]
shape = SubResource( 3 )

[node name="HitEffect" type="Particles2D" parent="."]
emitting = false
amount = 10
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
process_material = SubResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="SFX_Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0

[node name="SFX_Detect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="SFX_Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="PlayerDetectionTimer" to="." method="_on_PlayerDetectionTimer_timeout"]
[connection signal="body_entered" from="AttackZone" to="." method="_on_AttackZone_body_entered"]
